# visuals_fabrics

./: README.md  pyproject.toml
examples/: .gitignore  collision_avoidance.py  cover.py  cover_config.yaml  invite.py  invite_config.yaml  invite_small.py  point_robot_config.yaml  setups.yaml  setups_invite.yaml  superposition.py  superposition_config.yaml  title.py
examples/configs/: cover_config.yaml  cover_setup.yaml  invite_config.yaml  invite_small_config.yaml  invite_small_setup.yaml  title_config.yaml  title_setup.yaml
examples/outputs/: invite.eps
visuals_fabrics/: plot_trajectories.py  runners.py  visual_creator.py
