[tool.poetry]
name = "visuals-fabrics"
version = "0.1.0"
description = ""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
fabrics = {git = "https://github.com/tud-amr/fabrics.git", rev = "ft-load-from-yaml"}
planarenvs = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
